Fix layout issue: Remove bottom gap of thread container

--- a/src/app/features/chat/thread-panel/thread-panel.component.scss
+++ b/src/app/features/chat/thread-panel/thread-panel.component.scss
@@ -5,7 +5,7 @@
 
 .thread-panel {
   width: 100%;
-  height: calc(100vh - 230px);
+  height: calc(100vh - 135px);
   background: $white;
   border-radius: 20px;
   box-shadow: $box-shadow;
